--- a/configs/aerospace/aerospace.toml
+++ b/configs/aerospace/aerospace.toml
@@ -1,14 +1,9 @@
-# Place a copy of this config to ~/.aerospace.toml
-# After that, you can edit ~/.aerospace.toml to your liking
-
 after-login-command = []
 after-startup-command = []
 start-at-login = true
 
 enable-normalization-flatten-containers = true
-enable-normalization-opposite-orientation-for-nested-containers = true
 
-accordion-padding = 0
 default-root-container-layout = 'tiles'
 default-root-container-orientation = 'auto'
 key-mapping.preset = 'qwerty'
@@ -25,7 +20,6 @@ outer.top = 4
 outer.right = 4
 
 [mode.main.binding]
-
 alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
@@ -54,7 +48,6 @@ alt-9 = 'workspace 9'
 alt-b = 'workspace B'
 alt-d = 'workspace D'
 alt-e = 'workspace E'
-alt-m = 'workspace M'
 alt-n = 'workspace N'
 alt-p = 'workspace P'
 alt-t = 'workspace T'
@@ -72,14 +65,13 @@ alt-shift-9 = 'move-node-to-workspace 9'
 alt-shift-b = 'move-node-to-workspace B'
 alt-shift-d = 'move-node-to-workspace D'
 alt-shift-e = 'move-node-to-workspace E'
-alt-shift-m = 'move-node-to-workspace M'
 alt-shift-n = 'move-node-to-workspace N'
 alt-shift-p = 'move-node-to-workspace P'
 alt-shift-t = 'move-node-to-workspace T'
 alt-shift-v = 'move-node-to-workspace V'
 
 alt-shift-f = 'fullscreen'
-alt-r = 'balance-sizes'
+ctrl-alt-r = 'balance-sizes'
 alt-tab = 'workspace-back-and-forth'
 
 alt-semicolon = 'mode service'
